# RedditDigest

./: .replit  PROJECT_SETUP_INSTRUCTIONS.md  app.py  pyproject.toml  replit.md  test_chatgpt.py  test_reddit_sample.py
static/css/: style.css
static/js/: app.js
templates/: index.html
