[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "praw>=7.8.1",
    "google-genai>=1.27.0",
    "requests>=2.32.4",
    "sift-stack-py>=0.7.0",
    "openai>=1.98.0",
    "google-generativeai>=0.8.5",
]
